fix: really move this offscreen (wide resolutions)

--- a/app/stylus/layout.styl
+++ b/app/stylus/layout.styl
@@ -485,7 +485,7 @@ body.paginator
   .breadcrumb
     position fixed
     top -100px
-    left -999px
+    left -99999px
     text-align center
     z-index 100
     border-bottom-left-radius 10px
